--- a/package.json
+++ b/package.json
@@ -21,10 +21,17 @@
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/insomnia": "^5.8.0",
+    "@ionic-native/native-audio": "^5.8.0",
+    "@ionic-native/navigation-bar": "^5.8.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "cordova-plugin-insomnia": "4.3.0",
+    "cordova-plugin-nativeaudio": "3.0.9",
+    "cordova-plugin-navigationbar": "1.0.31",
     "core-js": "^2.5.4",
+    "ng-circle-progress": "^1.4.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
@@ -55,5 +62,12 @@
     "tslint": "~5.17.0",
     "typescript": "~3.1.6"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-insomnia": {},
+      "cordova-plugin-navigationbar": {},
+      "cordova-plugin-nativeaudio": {}
+    }
+  }
 }
