--- a/package.json
+++ b/package.json
@@ -27,9 +27,14 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "cordova-android": "8.0.0",
+    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-insomnia": "4.3.0",
+    "cordova-plugin-ionic": "5.3.0",
+    "cordova-plugin-ionic-webview": "^4.1.0",
     "cordova-plugin-nativeaudio": "3.0.9",
     "cordova-plugin-navigationbar": "1.0.31",
+    "cordova-plugin-splashscreen": "^5.0.2",
     "core-js": "^2.5.4",
     "ng-circle-progress": "^1.4.0",
     "rxjs": "~6.5.1",
@@ -46,10 +51,14 @@
     "@angular/compiler-cli": "~7.2.2",
     "@angular/language-service": "~7.2.2",
     "@ionic/angular-toolkit": "~1.5.1",
-    "@types/node": "~12.0.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~12.0.0",
     "codelyzer": "~4.5.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -67,7 +76,21 @@
     "plugins": {
       "cordova-plugin-insomnia": {},
       "cordova-plugin-navigationbar": {},
-      "cordova-plugin-nativeaudio": {}
-    }
+      "cordova-plugin-nativeaudio": {},
+      "cordova-plugin-ionic": {
+        "APP_ID": "9b8cd9d6",
+        "CHANNEL_NAME": "Production",
+        "UPDATE_METHOD": "background"
+      },
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
