--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/insomnia": "^5.8.0",
     "@ionic-native/native-audio": "^5.8.0",
     "@ionic-native/navigation-bar": "^5.8.0",
+    "@ionic-native/screen-orientation": "^5.8.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
@@ -34,8 +35,11 @@
     "cordova-plugin-ionic-webview": "^4.1.0",
     "cordova-plugin-nativeaudio": "3.0.9",
     "cordova-plugin-navigationbar": "1.0.31",
+    "cordova-plugin-screen-orientation": "3.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "core-js": "^2.5.4",
+    "device": "0.3.9",
+    "es6-promise-plugin": "4.2.2",
     "ng-circle-progress": "^1.4.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -87,7 +91,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-screen-orientation": {}
     },
     "platforms": [
       "android"
